--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jest": "^24.0.11",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/uuid": "^3.4.4",
+    "coveralls": "^3.0.3",
     "jest": "^24.7.1",
     "prettier": "^1.16.4",
     "rollup": "^1.9.0",
