--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onstarjs",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Package for making OnStar API requests",
   "main": "dist/index.js",
   "directories": {
@@ -20,7 +20,7 @@
     "chevrolet",
     "gm"
   ],
-  "author": "Ruben Medina",
+  "author": "Ruben Medina <dev@rubenmedina.com> (https://rubenmedina.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/samrum/OnStarJS/issues"
