--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "onstarjs",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Unofficial package for making OnStar API requests",
   "main": "dist/index.js",
+  "types": "dist/src/index.d.ts",
   "directories": {
     "test": "test"
   },
@@ -39,7 +40,7 @@
     "jest": "^24.7.1",
     "prettier": "^1.16.4",
     "rollup": "^1.9.0",
-    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-typescript2": "^0.20.1",
     "ts-jest": "^24.0.2",
     "ts-mockito": "^2.3.1",
     "tslib": "^1.9.3",
