--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
         "target": "ES6",
         "strict": true,
-        "esModuleInterop": true
-    }
+        "esModuleInterop": true,
+        "declaration": true,
+    },
+    "exclude": ["node_modules"]
 }
