--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onstarjs",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "description": "Unofficial package for making OnStar API requests",
   "main": "dist/index.js",
   "types": "dist/src/index.d.ts",
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
