--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "functional": "ts-node test/functional.ts"
   },
   "repository": {
     "type": "git",
@@ -44,6 +45,7 @@
     "rollup-plugin-typescript2": "^0.20.1",
     "ts-jest": "^24.0.2",
     "ts-mockito": "^2.3.1",
+    "ts-node": "^8.1.0",
     "tslib": "^1.9.3",
     "typescript": "^3.4.2"
   },
