--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "esModuleInterop": true,
         "declaration": true,
         "moduleResolution": "node",
+        "resolveJsonModule": true,
     },
     "exclude": ["node_modules"]
 }
