--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "onstarjs",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Unofficial package for making OnStar API requests",
   "main": "dist/index.js",
   "types": "dist/src/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "directories": {
     "test": "test"
   },
@@ -12,7 +15,8 @@
     "dev": "rollup -c -w",
     "test": "jest",
     "coverage": "jest --coverage",
-    "functional": "ts-node test/functional.ts"
+    "functional": "ts-node test/functional.ts",
+    "prepublish": "yarn run test && yarn run build"
   },
   "repository": {
     "type": "git",
