Exclude tests directory from typescript compilation. Update types value in package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Unofficial package for making OnStar API requests",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
-  "types": "dist/src/index.d.ts",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
