--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,5 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
     },
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "test"]
 }
