--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/jsonwebtoken": "^8.3.2",
     "@types/uuid": "^3.4.4",
     "coveralls": "^3.0.3",
+    "dotenv": "^8.2.0",
     "jest": "^24.7.1",
     "prettier": "^1.16.4",
     "rollup": "^1.9.0",
