Remove travis config, coveralls, send coverage info via coveralls github action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,4 +15,8 @@ jobs:
       - name: yarn install, and test
         run: |
           yarn install
-          yarn test:unit
+          yarn test:coverage
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
