--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,3 +31,9 @@ jobs:
         run: |
           yarn install
           yarn test:functional
+        env:
+          DEVICEID: ${{ secrets.FUNCTIONAL_TEST_DEVICEID }}
+          VIN: ${{ secrets.FUNCTIONAL_TEST_VIN }}
+          USERNAME: ${{ secrets.FUNCTIONAL_TEST_USERNAME }}
+          PASSWORD: ${{ secrets.FUNCTIONAL_TEST_PASSWORD }}
+          ONSTARPIN: ${{ secrets.FUNCTIONAL_TEST_ONSTARPIN }}
