--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: tests
+name: build
 
 on:
   push:
@@ -7,7 +7,17 @@ on:
     branches: [master]
 
 jobs:
-  unit:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: yarn install, and build
+        run: |
+          yarn install
+          yarn build
+
+  test-unit:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,9 +30,8 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-  functional:
-    if: github.actor == github.event.repository.owner.login
 
+  test-functional:
     runs-on: ubuntu-latest
 
     steps:
