--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:unit": "jest test/unit",
     "test:coverage": "jest test/unit --coverage",
     "test:functional": "jest test/functional",
+    "test:keys": "jest test/functional -t 'Unupgraded Command Successful'",
     "prepublishOnly": "yarn run test && yarn run build"
   },
   "lint-staged": {
