--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/uuid": "^3.4.4",
