chore: add prerelease command for tests & build, update test command (#38)
* chore: add preelease command to run tests and build

* chore: add command to run unit & functional tests, update prerelease and prepublish to use it

* chore: update test command to run unit & functional tests, remove test:all command

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "build": "rm -rf dist && rollup -c",
     "dev": "rm -rf dist && rollup -c -w",
     "prepublishOnly": "yarn run test && yarn run build",
+    "prerelease": "yarn run test && yarn run build",
     "release": "standard-version",
-    "test": "jest test/unit",
+    "test": "yarn run test:unit && yarn run test:functional",
     "test:unit": "jest test/unit",
     "test:coverage": "jest test/unit --coverage",
     "test:functional": "jest test/functional",
