chore: add a lint script, lint project

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "build": "rm -rf dist && rollup -c",
     "dev": "rm -rf dist && rollup -c -w",
+    "lint": "prettier --write .",
     "prepublishOnly": "yarn run test && yarn run build",
     "prerelease": "yarn run test && yarn run build",
     "release": "standard-version --sign",
