fix: update app config values (2344580)

--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,6 +1,6 @@
 {
-  "appId": "OMB_CVY_AND_5C0",
-  "appSecret": "Z9s9fP4cZupHW8vB8mRHrDWZgMeuh9QnfWZZ",
+  "appId": "OMB_CVY_AND_5D0",
+  "appSecret": "TMJ27tXp4aHToCDL3ydbFjVQagzFjoGWesmx",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc commerce user_trailer",
   "serviceUrl": "https://api.gm.com",
