--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Extract release notes
+        id: extract-release-notes
+        uses: ffurrer2/extract-release-notes@v1
+        
       - name: Create release
         run: |
-          gh release create "${GITHUB_REF#refs/tags/}" -F CHANGELOG.md
+          gh release create "${GITHUB_REF#refs/tags/}" -n ${{ steps.extract-release-notes.outputs.release_notes }}
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
