--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "husky": "^6.0.0",
     "jest": "^26.0.1",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.0.5",
+    "prettier": "2.3.2",
     "rollup": "^2.45.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "standard-version": "^9.1.0",
