fix: update app config values (2461527)

--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,6 +1,6 @@
 {
-  "appId": "OMB_CVY_AND_5D0",
-  "appSecret": "TMJ27tXp4aHToCDL3ydbFjVQagzFjoGWesmx",
+  "appId": "OMB_CVY_AND_5E0",
+  "appSecret": "uh2pj84EBfTqCgiGM9LZzgySXCgjpomiPKQb",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc commerce user_trailer",
   "serviceUrl": "https://api.gm.com",
