fix: update app config values (2539908)

--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,6 +1,6 @@
 {
-  "appId": "OMB_CVY_AND_5E0",
-  "appSecret": "uh2pj84EBfTqCgiGM9LZzgySXCgjpomiPKQb",
+  "appId": "OMB_CVY_AND_5F0",
+  "appSecret": "HTE7HVudMe5ocviEXXYHNtxrRqff2LwarAjG",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc commerce user_trailer",
   "serviceUrl": "https://api.gm.com",
