--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,6 +1,6 @@
 {
-  "appId": "OMB_CVY_AND_5F0",
-  "appSecret": "HTE7HVudMe5ocviEXXYHNtxrRqff2LwarAjG",
+  "appId": "OMB_CVY_AND_5G0",
+  "appSecret": "kgKXKb4JxPW4CrJhBH7q9iAeRJfBLyomdwSX",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc commerce user_trailer",
   "serviceUrl": "https://api.gm.com",
