--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{js,ts}": [
+    "*.{js,ts,md,yml}": [
       "prettier --write"
     ]
   },
