--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/jest": "^27.0.1",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/uuid": "^8.3.0",
@@ -66,7 +67,6 @@
     "lint-staged": "^11.0.0",
     "prettier": "2.3.2",
     "rollup": "^2.45.2",
-    "rollup-plugin-typescript2": "^0.30.0",
     "standard-version": "^9.1.0",
     "ts-jest": "^26.1.0",
     "ts-mockito": "^2.3.1",
