--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,11 @@
     "strict": true,
     "esModuleInterop": true,
     "declaration": true,
+    "outDir": "dist",
+    "declarationDir": ".",
     "moduleResolution": "node",
     "resolveJsonModule": true
   },
-  "exclude": ["node_modules", "test"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "test", "dist"]
 }
