--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "build": "rm -rf dist && rollup -c",
     "dev": "rm -rf dist && rollup -c -w",
     "lint": "prettier --write .",
-    "prepublishOnly": "yarn run test && yarn run build",
-    "prerelease": "yarn run test && yarn run build",
     "release": "standard-version --sign",
     "test": "yarn run test:unit && yarn run test:functional",
     "test:unit": "jest test/unit",
@@ -29,6 +27,11 @@
     "*.{js,ts,md,yml}": [
       "prettier --write"
     ]
+  },
+  "standard-version": {
+    "scripts": {
+      "prerelease": "yarn test && yarn build"
+    }
   },
   "sideEffects": false,
   "repository": {
