test: rename env variables

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DEVICEID="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
 VIN="1G2ZF58B774109863"
-USERNAME="foo@bar.com"
-PASSWORD="p@ssw0rd"
-ONSTARPIN="1234"
+ONSTAR_USERNAME="foo@bar.com"
+ONSTAR_PASSWORD="p@ssw0rd"
+ONSTAR_PIN="1234"
