--- a/.github/workflows/key-check.yml
+++ b/.github/workflows/key-check.yml
@@ -17,6 +17,6 @@ jobs:
         env:
           DEVICEID: ${{ secrets.FUNCTIONAL_TEST_DEVICEID }}
           VIN: ${{ secrets.FUNCTIONAL_TEST_VIN }}
-          USERNAME: ${{ secrets.FUNCTIONAL_TEST_USERNAME }}
-          PASSWORD: ${{ secrets.FUNCTIONAL_TEST_PASSWORD }}
-          ONSTARPIN: ${{ secrets.FUNCTIONAL_TEST_ONSTARPIN }}
+          ONSTAR_USERNAME: ${{ secrets.FUNCTIONAL_TEST_USERNAME }}
+          ONSTAR_PASSWORD: ${{ secrets.FUNCTIONAL_TEST_PASSWORD }}
+          ONSTAR_PIN: ${{ secrets.FUNCTIONAL_TEST_ONSTARPIN }}
