--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,20 +12,45 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: yarn install, and build
-        run: |
-          yarn install
-          yarn build
+
+      - name: Cache pnpm modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 6
+          run_install: true
+
+      - name: build
+        run: pnpm build
 
   test-unit:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-      - name: yarn install, and test
-        run: |
-          yarn install
-          yarn test:coverage
+
+      - name: Cache pnpm modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 6
+          run_install: true
+
+      - name: test:unit with coverage
+        run: pnpm test:coverage
+
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
@@ -36,10 +61,22 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: yarn install, and test
-        run: |
-          yarn install
-          yarn test:functional
+
+      - name: Cache pnpm modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 6
+          run_install: true
+
+      - name: test:functional
+        run: pnpm test:functional
         env:
           DEVICEID: ${{ secrets.FUNCTIONAL_TEST_DEVICEID }}
           VIN: ${{ secrets.FUNCTIONAL_TEST_VIN }}
