--- a/.github/workflows/key-check.yml
+++ b/.github/workflows/key-check.yml
@@ -10,10 +10,22 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: yarn install, and test keys
-        run: |
-          yarn install
-          yarn test:keys
+
+      - name: Cache pnpm modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 6
+          run_install: true
+
+      - name: test:keys
+        run: pnpm test:keys
         env:
           DEVICEID: ${{ secrets.FUNCTIONAL_TEST_DEVICEID }}
           VIN: ${{ secrets.FUNCTIONAL_TEST_VIN }}
