--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,8 +1,1 @@
-{
-  "appId": "OMB_CVY_AND_5I0",
-  "appSecret": "k5Grt9JU7FTkh6aeMMFyczqQmZe5DHQRjmeo",
-  "optionalClientScope": "",
-  "requiredClientScope": "onstar gmoc commerce user_trailer",
-  "serviceUrl": "https://api.gm.com",
-  "userAgent": "Mozilla/5.0 (Linux; U; Android 9; en-US; Google Pixel 2 Build/PI)"
-}
+{"appId":"OMB_CVY_AND_5J0","appSecret":"SGGSraT9f2wgqb9jsorLaGEajvmTp6Ni9ka9","optionalClientScope":"","requiredClientScope":"onstar gmoc commerce user_trailer","serviceUrl":"https://api.gm.com","userAgent":"Mozilla/5.0 (Linux; U; Android 9; en-US; Google Pixel 2 Build/PI)"}
