--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,6 +1,6 @@
 {
-  "appId": "OMB_CVY_AND_5I0",
-  "appSecret": "k5Grt9JU7FTkh6aeMMFyczqQmZe5DHQRjmeo",
+  "appId": "OMB_CVY_AND_5J0",
+  "appSecret": "SGGSraT9f2wgqb9jsorLaGEajvmTp6Ni9ka9",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc commerce user_trailer",
   "serviceUrl": "https://api.gm.com",
