fix: update app config values (3191181)

--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,6 +1,6 @@
 {
-  "appId": "OMB_CVY_AND_5J0",
-  "appSecret": "SGGSraT9f2wgqb9jsorLaGEajvmTp6Ni9ka9",
+  "appId": "OMB_CVY_AND_5K0",
+  "appSecret": "KhH46eZJ7xzojYLmF89SxYNLQZ3bVmRjXmQ6",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc commerce user_trailer",
   "serviceUrl": "https://api.gm.com",
