--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,6 +1,6 @@
 {
-  "appId": "OMB_CVY_AND_5K0",
-  "appSecret": "KhH46eZJ7xzojYLmF89SxYNLQZ3bVmRjXmQ6",
+  "appId": "OMB_CVY_AND_5L1",
+  "appSecret": "BuSNTqJ5bMQvYSWGGTGAppYUsVMbfbi7hwLR",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc commerce user_trailer",
   "serviceUrl": "https://api.gm.com",
