fix: update app config values (3323459)

--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,6 +1,6 @@
 {
-  "appId": "OMB_CVY_AND_5L1",
-  "appSecret": "BuSNTqJ5bMQvYSWGGTGAppYUsVMbfbi7hwLR",
+  "appId": "OMB_CVY_AND_5M0",
+  "appSecret": "niah5iuxUr97QWuBmWeoA56SQacviA9tZENe",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc commerce user_trailer",
   "serviceUrl": "https://api.gm.com",
