fix: update app config values (3659024)

--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,6 +1,6 @@
 {
-  "appId": "OMB_CVY_AND_5O0",
-  "appSecret": "QRYkoijCwrAEWFAc6bHFKHsjR6oQrSYBA3h7",
+  "appId": "OMB_CVY_AND_5P1",
+  "appSecret": "hToTDDd9gEyde57P8LDW9srukod4A53ftdgH",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc user_trailer",
   "serviceUrl": "https://api.gm.com",
