chore: remove functional testing from prerelease
no longer have valid credentials to test with

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "standard-version": {
     "scripts": {
-      "prerelease": "pnpm test && pnpm build"
+      "prerelease": "pnpm test:unit && pnpm build"
     }
   },
   "sideEffects": false,
