--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,6 +1,6 @@
 {
-  "appId": "OMB_CVY_AND_5U0",
-  "appSecret": "NZbzagcuvTceQScyRTb6tiE78qzfBJVnHV7u",
+  "appId": "OMB_CVY_AND_5V1",
+  "appSecret": "LDnBTYTVMevwRNTAvWfaYNFhAGhYhLdxXabb",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc user_trailer user priv",
   "serviceUrl": "https://api.gm.com",
