--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,6 +1,6 @@
 {
-  "appId": "OMB_CVY_AND_5V1",
-  "appSecret": "LDnBTYTVMevwRNTAvWfaYNFhAGhYhLdxXabb",
+  "appId": "OMB_CVY_AND_6A0",
+  "appSecret": "St7bXCUnyToRMzhYickiQQ4DF5jqhyU6kDLA",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc user_trailer user priv",
   "serviceUrl": "https://api.gm.com",
