--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,7 +1,7 @@
 {
   "appId": "OMB_CVY_AND_6C0",
   "appSecret": "rD7Knsp7QMdHhJvbQ9QymG5ejKdPo28Fxc6U",
-  "optionalClientScope:"",
+  "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc user_trailer user priv",
   "serviceUrl": "https://api.gm.com",
   "userAgent": "Mozilla/5.0 (Linux; U; Android 9; en-US; Google Pixel 2 Build/PI)"
