--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Unofficial package for making OnStar API requests",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
+  "type": "module",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
@@ -56,27 +57,26 @@
   },
   "homepage": "https://github.com/samrum/OnStarJS#readme",
   "dependencies": {
-    "axios": "^0.21.1",
-    "jsonwebtoken": "^8.5.1",
-    "uuid": "^8.3.2"
+    "axios": "^1.3.6",
+    "jsonwebtoken": "^9.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "@types/jest": "^27.0.1",
-    "@types/jsonwebtoken": "^8.3.2",
-    "@types/uuid": "^8.3.0",
-    "dotenv": "^10.0.0",
-    "husky": "^7.0.0",
-    "jest": "^26.0.1",
-    "lint-staged": "^11.0.0",
-    "prettier": "2.3.2",
-    "rollup": "^2.45.2",
-    "standard-version": "^9.1.0",
-    "ts-jest": "^26.1.0",
-    "ts-mockito": "^2.3.1",
-    "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
-  },
-  "peerDependencies": {}
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-typescript": "^11.1.0",
+    "@types/jest": "^29.5.1",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/uuid": "^9.0.1",
+    "dotenv": "^16.0.3",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.1",
+    "prettier": "2.8.8",
+    "rollup": "^3.21.0",
+    "standard-version": "^9.5.0",
+    "ts-jest": "^29.1.0",
+    "ts-mockito": "^2.6.1",
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.4"
+  }
 }
