--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,6 +1,6 @@
 {
-  "appId": "OMB_CVY_AND_6G1",
-  "appSecret": "eKHKUMfWUiumK8HD3R9nzq23ShQepLWwDq8B",
+  "appId": "OMB_CVY_AND_6I0",
+  "appSecret": "H6vagqMwVoJmxMNyEp3q3eMfrsiC5qJf7dBp",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc user_trailer user priv",
   "serviceUrl": "https://api.gm.com",
