--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,8 +1,8 @@
 {
-  "appId": "OMB_CVY_iOS_6T0",
-  "appSecret": "TNvVSfSfstbqdVSxd4yuJFFHZgUXsL3CCzoe",
+  "appId": "OMB_CVY_iOS_6V0",
+  "appSecret": "HWi9JcBRXWm4rFp6UQsatfVJbHG6Fu8YgyWD",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc user_trailer user priv",
   "serviceUrl": "https://api.gm.com",
-  "userAgent": "myChevrolet/95 CFNetwork/1408.0.4 Darwin/22.5.0"
+  "userAgent": "myChevrolet/118 CFNetwork/1408.0.4 Darwin/22.5.0"
 }
