--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,6 +1,6 @@
 {
-  "appId": "OMB_CVY_iOS_6V0",
-  "appSecret": "HWi9JcBRXWm4rFp6UQsatfVJbHG6Fu8YgyWD",
+  "appId": "OMB_CVY_iOS_6W2",
+  "appSecret": "obZ6sTewyPd8c7JE9SyfLnmeLpX6gLtpoytz",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc user_trailer user priv",
   "serviceUrl": "https://api.gm.com",
