--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "test": "test"
   },
   "scripts": {
-    "build": "rm -rf dist && rollup -c",
-    "dev": "rm -rf dist && rollup -c -w",
+    "build": "rimraf dist && rollup -c",
+    "dev": "rimraf dist && rollup -c -w",
     "lint": "prettier --write .",
     "prepublishOnly": "pnpm run build",
     "release": "standard-version --sign",
@@ -66,6 +66,7 @@
   "dependencies": {
     "axios": "^1.3.6",
     "jsonwebtoken": "^9.0.0",
+    "pnpm": "^8.3.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -79,6 +80,7 @@
     "jest": "^29.5.0",
     "lint-staged": "^13.2.1",
     "prettier": "2.8.8",
+    "rimraf": "^5.0.5",
     "rollup": "^3.21.0",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.1.0",
