--- a/src/onStarAppConfig.json
+++ b/src/onStarAppConfig.json
@@ -1,6 +1,6 @@
 {
-  "appId": "OMB_CVY_iOS_6X1",
-  "appSecret": "HZ7xQfoHWhTWLj2gyHBMFzohCcZmnx4kmp2N",
+  "appId": "OMB_CVY_iOS_6Y0",
+  "appSecret": "mzLiswGw9NReBtmWQQH9V5TPYm6i8tSHxjyD",
   "optionalClientScope": "",
   "requiredClientScope": "onstar gmoc user_trailer user priv",
   "serviceUrl": "https://api.gm.com",
